<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9000000"
    tools:context=".Chat">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/contentContact"
        app:layout_constraintStart_toEndOf="@+id/back1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pic1" />

    <TextView
        android:id="@+id/typing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/typing"
        android:textColor="#CCC7C7"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="264dp"
        android:layout_height="61dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:background="#5A5252"
        android:text="@string/loremIpsum"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typing" />

    <EditText
        android:id="@+id/sendMessage"
        android:layout_width="246dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="552dp"
        android:autofillHints=""
        android:background="#FFFDFD"
        android:backgroundTint="#BDB1B1"
        android:ems="10"
        android:freezesText="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        android:text="@string/sendMessage"
        android:textColor="#92000000"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="552dp"
        android:background="#FFFDFD"
        android:backgroundTint="#BDB1B1"
        android:contentDescription="@string/sendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFDFD"
        android:backgroundTint="#BDB1B1"
        android:contentDescription="@string/addImage"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/sendMessage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="552dp"
        android:background="#00FFFDFD"
        android:backgroundTint="#00BDB1B1"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/emoji"
        android:textSize="24sp"
        app:iconPadding="0dp"
        app:iconTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/contentMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pic8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/contentContact"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pic1" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:background="#5A5252"
        android:contentDescription="@string/contentPic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/mibr_49920077431_o__2_" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/contentContact"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/pic1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/contentContact"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/pic1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="257dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:background="#330E0E"
        android:text="@string/loremIpsum"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="264dp"
        android:layout_height="61dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="#5A5252"
        android:text="@string/loremIpsum"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/back1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

</androidx.constraintlayout.widget.ConstraintLayout>